--- a/templates/pvc.yaml
+++ b/templates/pvc.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   storageClassName: nfs-client 
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 20Gi
